--- a/homeworkFive/homeworkFive/homeworkFive.csproj
+++ b/homeworkFive/homeworkFive/homeworkFive.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{462DBD7A-B31F-41F0-B307-168ED23C8D42}</ProjectGuid>
+    <ProjectGuid>{798A14A8-1C37-45C0-A17F-BA1F84129FE5}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ClassNotes</RootNamespace>
-    <AssemblyName>ClassNotes</AssemblyName>
+    <RootNamespace>homeworkFive</RootNamespace>
+    <AssemblyName>homeworkFive</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,11 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="doWhileLoop.cs" />
-    <Compile Include="ifElseShortcut.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="switchStatements.cs" />
-    <Compile Include="whileLoop1.cs" />
+    <Compile Include="whileLoop.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
